Added files to the directory

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,10 @@ body {
     background-color: #f0d1b5ff;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 h1, h2, h3 {
     color: #1f2421ff;
 }
@@ -56,6 +60,15 @@ h3 {
 }
 
 
+.section {
+  opacity: 0;
+  transform: translateY(40px);
+  transition: opacity 0.6s, transform 0.6s;
+}
+.section.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
 
 /* Header Styles */
 header {
@@ -176,6 +189,7 @@ nav ul li:last-child {
 
 .projects h3 {
     font-size: 2rem;
+    margin-bottom: 0.2rem;
 }
 
 .project-cards {
