Made responsive for smaller screens

--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,19 @@ nav ul li:last-child {
     padding-right: 15px;
 }
 
+@media screen and (max-width: 768px) {
+    header {
+        flex-direction: column;
+        height: auto; /* Allow height to adjust based on content */
+    }
+    header h1 {
+        margin-bottom: 2rem; /* Add some space below the title */
+    }
+    header nav ul {
+        align-items: center; /* Center items horizontally */
+    }
+}
+
 /*About Section*/
 .about {
     display: flex;
@@ -179,6 +192,30 @@ nav ul li:last-child {
 }
 
 
+@media (max-width: 768px) {
+    .about {
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+        margin: 2rem 1rem;
+    }
+
+    .about-text {
+        text-align: center;
+        margin: 1rem 1rem;
+    }
+
+    .about-divider {
+        margin: 1rem auto;
+    }
+
+    .about-photo-wrapper {
+        margin-bottom: 0;
+        margin-top: 1rem;
+    }
+}
+
+
 /* Projects Section */
 .projects {
     display: flex;
@@ -213,6 +250,22 @@ nav ul li:last-child {
     flex: 1 1 0;
     min-width: 200px;
     max-width: 400px;
+}
+
+@media (max-width: 768px) {
+    .projects {
+        margin: 1rem 1rem;
+    }
+    
+    .project-cards {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    .project-card {
+        max-width: 90%;
+        align-items: center;
+    }
 }
 
 .project-card h4 {
@@ -264,6 +317,20 @@ nav ul li:last-child {
     box-shadow: 0 2px 8px rgba(33,104,105,0.12);
 }
 
+@media screen and (max-width: 768px) {
+    .slideshow-container {
+    gap: 1 rem;
+    }
+
+    .slideshow-image {
+
+        width: 40vw; /* Full width on smaller screens */
+        height: 400px;
+        object-fit: cover;
+    }
+    
+}
+
 /* Next & previous buttons */
 .prev, .next {
   position: static;
@@ -302,6 +369,10 @@ nav ul li:last-child {
     flex-direction: column;
     align-items: center;
     margin: 5rem 10rem;
+}
+
+.contact p {
+    text-align: center;
 }
 
 
